--- a/msg.html
+++ b/msg.html
@@ -21,16 +21,20 @@
         All right, I concede.  The technology should definitely be financially rewarding.
       </p>
       <p>
-        That's all for now.  <a href="mailto:kirollos@gmail.com">Contact me</a> for any questions or comments.
+      <p>
+        That's all for now.  <a href="mailto:kirollos@gmail.com">Contact me</a> for any questions or comments, or to simply ridicule me for creating a page specifically designed for this one purpose.
+      </p>
+      <p>
+        My apologies, I know this is 12 times longer than what your average twitter user is accustomed to.  But if you've read this far, then thanks.
         <br/>
         <br/>
         Kirollos (Kiro) Risk
       </p>
       <p style="font-size: 12px;">
-        P.S., I once spent a month in a monastery in Southern California.  It was during a fast.  The monks ate only vegetables.  I adapted for as long as I could, but had to escape the second week to the nearest town for a burger (or two).  Can’t really blame me - the monastery didn’t have tofu.  
+        P.S., I once spent a month in a monastery in Southern California.  It was during a fast.  The monks ate only vegetables.  I adapted for as long as I could, but had to escape the second week to the nearest town for a burger (or two).  Can’t really blame me - the monastery didn’t have tofu.
       </p>
       <p style="font-size: 12px;">
-        P.P.S., If I join your team, I’ll try vegetarianism for a full month.
+        P.P.S., If I join your team, I’ll try vegetarianism for a full month. Scout's honor.
       </p>
       
     </div>
