--- a/msg.html
+++ b/msg.html
@@ -24,12 +24,11 @@
         Let me just go ahead and say that I love my current position, and employer.  Frankly, they really do not give me any reason to leave.  Nonetheless, I wouldn’t say that the technology I create helps people on a personal and social level (e.g., twitter, blogger, or other collaborative web systems), though, it definitely does help them make money.  However, is that really the <strong>ONLY</strong> type of technology that I want to keep creating? Do my projects have to exist solely for the enjoyment of a very <strong>few</strong> privileged individuals? I’m not quite sure.
       </p>
       <p>
-        However, in working with the <a href="http://twitter.com/#!/biz">Nerd of the Year</a>, the <a href="http://twitter.com/#!/goldman">failed astrophysicist</a>, and <a href="http://twitter.com/#!/ev">Evan</a>* (vegetarian? really?) I hope to create technology whose success is directly proportional to the positive impact it has, and, if I may kindly steal from your website, technology that makes people happy.  That’s probably my biggest motivation.
+        However, in working with the <a href="http://twitter.com/#!/biz">Nerd of the Year</a>, the <a href="http://twitter.com/#!/goldman">failed astrophysicist</a>, and <a href="http://twitter.com/#!/ev">Evan</a>* (vegetarian? really?) I hope to create technology whose success is directly proportional to the positive impact it has, and, if I may kindly steal from your website, technology that makes people happy, and is financially rewarding.
       </p>
       <p>
-        All right, I concede.  The technology should definitely be financially rewarding.
+        I want to create technology that helps people improve the world.
       </p>
-      <p>
       <p>
         That's all for now.  <a href="mailto:kirollos@gmail.com">Contact me</a> for any questions, comments, or to simply ridicule me for creating a page specifically designed for this one purpose.
       </p>
