--- a/msg.html
+++ b/msg.html
@@ -27,7 +27,7 @@
         However, in working with the <a href="http://twitter.com/#!/biz">Nerd of the Year</a>, the <a href="http://twitter.com/#!/goldman">failed astrophysicist</a>, and <a href="http://twitter.com/#!/ev">Evan</a>* (vegetarian? really?) I hope to create technology whose success is directly proportional to the positive impact it has, and, if I may kindly steal from your website, technology that makes people happy, and is financially rewarding.
       </p>
       <p>
-        I want to create technology that helps people improve the world.
+        Most importantly, I want to create technology that helps people improve the world.
       </p>
       <p>
         That's all for now.  <a href="mailto:kirollos@gmail.com">Contact me</a> for any questions, comments, or to simply ridicule me for creating a page specifically designed for this one purpose.
