--- a/msg.html
+++ b/msg.html
@@ -37,6 +37,7 @@
         <br/>
         <br/>
         Kirollos (Kiro) Risk
+        <sub><a href="http://www.linkedin.com/in/kirollos" style="display: block;">Here I am on Linked in</a></sub>
       </p>
       <p style="font-size: 12px;">
         * I once spent a month in a monastery in Southern California.  It was during a fast.  The monks ate only vegetables.  I adapted for as long as I could, but had to escape the second week to the nearest town for a burger (or two).  Can’t really blame me - the monastery didn’t have tofu.
