--- a/msg.html
+++ b/msg.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="container">
-      <h2>A special message to The Obvious Corporation</h2>
+      <h2>A Special Message to The Obvious Corporation</h2>
       <article id="short_version" style="display: none;">
       <p>
         I like what I do.  You probably will like it too.  Let's join forces.
