--- a/msg.html
+++ b/msg.html
@@ -33,7 +33,7 @@
         That's all for now.  <a href="mailto:kirollos@gmail.com">Contact me</a> for any questions, comments, or to simply ridicule me for creating a page specifically designed for this one purpose.
       </p>
       <p>
-        My apologies, I know this is 12 times longer than what your average twitter user is accustomed to.  But if you've read this far, then thanks. Or, if you think this is too pathetically long, <a href="#" id="short_version_link">here's the short version.</a>
+        Also, my apologies, I know this is 12 times longer than what your average twitter user is accustomed to.  But if you've read this far, then thanks. Or, if you think this is too pathetically long, <a href="#" id="short_version_link">here's the short version.</a>
         <br/>
         <br/>
         Kirollos (Kiro) Risk
