--- a/provision.html
+++ b/provision.html
@@ -35,7 +35,7 @@
     <p>
         <div class="figure" style="float: right; width: 228px; margin-left: 15px;">
             <div>
-                <img src="Images/BlockDiagram.png" /></div>
+                <img src="images/BlockDiagram.png" /></div>
             <div>
                 <strong>Figure 1</strong> - Block Diagram of a Component</div>
         </div>
@@ -66,7 +66,7 @@
     <p>
         <div class="figure" style="float: left; width: 228px; margin-right: 15px;">
             <div>
-                <img src="Images/Composition.png" /></div>
+                <img src="images/Composition.png" /></div>
             <div>
                 <strong>Figure 2</strong> - Block Diagram of a Component</div>
         </div>
