--- a/quisq/index.html
+++ b/quisq/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="javascript/jquery-waypoints.js"></script>
 		<script type="text/javascript" src="javascript/jquery-history.js"></script>
 		<script type="text/javascript" src="javascript/main.js"></script>
+		<link rel="stylesheet" href="http://f.fontdeck.com/s/css/trvaBtsYADmd8Le13PuWLFAeMhY/kiro.me/11546.css" type="text/css" />
     	<link href="main.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
