--- a/quisq/index.html
+++ b/quisq/index.html
@@ -60,7 +60,7 @@
 					Our raison d'etre is to make you happy with digital services that solve your particular problem or business challenge. Here are a few ways how we can work together:
 				</h3>
 				<div class="col col1">
-					<img src="images/process_1.png" alt="Strategic Consulting">
+					<img src="images/process_1a.png" alt="Strategic Consulting">
 					<h4>Web Development</h4>
 					<p>
 					We design and build each website to suit the needs of individual businesses. Every website is unique and carefully hand crafted.
@@ -70,7 +70,7 @@
 					</p>
 				</div>
 				<div class="col col2">
-					<img src="images/process_2.png" alt="Idea Smackdowns">
+					<img src="images/process_2a.png" alt="Idea Smackdowns">
 					<h4>Mobile Development</h4>
 					<p>
 						We're passionate about building great mobile applications that leverage the full capabilities of smartphones and cloud services. 
@@ -80,10 +80,10 @@
 					</p>
 				</div>
 				<div class="col col3">
-					<img src="images/process_3.png" alt="Business Concept Design">
-					<h4>Search Engine Optimization (SEO)</h4>
+					<img src="images/process_3a.png" alt="Business Concept Design">
+					<h4>SEO</h4>
 					<p>
-						We make your website search engine friendly, meaing more accessible and relevant to what the searcher is searching for.
+						Search Engine Optimization. We make your website search engine friendly, meaing more accessible and relevant to what the searcher is searching for.
 					</p>
 					<p>
 						This is the only way that search engines can properly rank and list your website near the top of the results.  Websites that are more accessible and more relevant get listed first.
@@ -93,9 +93,9 @@
 					<img src="images/process_4.png" alt="Lähtölaukaus">
 					<h4>Something else</h4>
 					<p>
-					When you have developed a concept with us or already have a well-defined problem to solve, with Lähtölaukaus we'll make it happen for you. We take the concept to production in five weeks.
+					Something else goes here
 					</p>
-					<a href="http://lahtolaukaus.fi" class="readmore">Learn more &nbsp;&nbsp;→</a>
+					<a href="link_to_more" class="readmore">Learn more</a>
 				</div>
 			</section>
 			<section id="people">
