--- a/quisq/index.html
+++ b/quisq/index.html
@@ -29,7 +29,7 @@
 				</a>
 			</section>
 			<section id="work">
-				<h2>Work</h2>
+				<h2>Our Work</h2>
 			</section>
 			<section id="about">
 				<h2>About us</h2>
