--- a/quisq/index.html
+++ b/quisq/index.html
@@ -83,7 +83,7 @@
 					<img src="images/process_3a.png" alt="Business Concept Design">
 					<h4>SEO</h4>
 					<p>
-						Search Engine Optimization. We make your website search engine friendly, meaing more accessible and relevant to what the searcher is searching for.
+						Search Engine Optimization. We make your website search engine friendly, meaning more accessible and relevant to what the searcher is searching for.
 					</p>
 					<p>
 						This is the only way that search engines can properly rank and list your website near the top of the results.  Websites that are more accessible and more relevant get listed first.
