--- a/quisq/index.html
+++ b/quisq/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<html lang="en"><head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<title>Kisko Labs</title>
+		<meta charset="utf-8">
+		<meta content="Quisq" name="author">
+		<meta content="Quisq - Web design and development" name="description">
+		<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport">
+		<meta content="yes" name="apple-mobile-web-app-capable">
+		<meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
 		<script type="text/javascript" src="javascript/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="javascript/jquery-cycle.js"></script>
 		<script type="text/javascript" src="javascript/jquery-stickyPanel.js"></script>
