--- a/quisq/index.html
+++ b/quisq/index.html
@@ -17,6 +17,16 @@
 		<script type="text/javascript" src="javascript/jquery-waypoints.js"></script>
 		<script type="text/javascript" src="javascript/jquery-history.js"></script>
 		<script type="text/javascript" src="javascript/main.js"></script>
+		<script type="text/javascript">
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-25301489-2']);
+		  _gaq.push(['_trackPageview']);
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+		</script>
 		<link rel="stylesheet" href="http://f.fontdeck.com/s/css/GzquBrtA5R1IjOjZ9KPx8cFffVQ/kiro.me/11546.css" type="text/css" />
     	<link href="main.css" type="text/css" rel="stylesheet" />
 	</head>
