--- a/quisq/index.html
+++ b/quisq/index.html
@@ -125,7 +125,7 @@
 					<h3>Kirollos Risk</h3>
 					<p>Director</p>
 				</a>
-				<a href="http://www.linkedin.com/in/kirollos">
+				<a href="http://www.linkedin.com/in/minamichail">
 					<div class="img img2"></div>
 					<h3>Mina Michail</h3>
 					<p>Pursuer of Excellence</p>
