--- a/quisq/index.html
+++ b/quisq/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<html lang="en"><head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<title>Kisko Labs</title>
+		<title>quisq</title>
 		<meta charset="utf-8">
 		<meta content="Quisq" name="author">
 		<meta content="Quisq - Web design and development" name="description">
