--- a/quisq/index.html
+++ b/quisq/index.html
@@ -123,7 +123,7 @@
 				<a href="http://www.linkedin.com/in/kirollos">
 					<div class="img img1"></div>
 					<h3>Kirollos Risk</h3>
-					<p>Director</p>
+					<p>Fantastic One</p>
 				</a>
 				<a href="http://www.linkedin.com/in/minamichail">
 					<div class="img img2"></div>
