--- a/quisq/index.html
+++ b/quisq/index.html
@@ -117,7 +117,7 @@
 					<a href="link_to_more" class="readmore">Learn more</a>
 				</div>
 			</section>
-			<section id="people">
+			<section id="team">
 				<h2>Our team</h2>
 				<h3 class="hd">Meet our happy and cross-functional team, ready to serve you and to make the amazing happen for you.</h3>
 				<a href="http://www.linkedin.com/in/kirollos">
@@ -165,7 +165,7 @@
 					<li><a tabindex="-1" href="#work" class="">Work</a></li>
 					<li><a tabindex="-1" href="#about" class="">About</a></li>
 					<li><a tabindex="-1" href="#services" class="">Services</a></li>
-					<li><a tabindex="-1" href="#people" class="">Team</a></li>
+					<li><a tabindex="-1" href="#team" class="">Team</a></li>
 					<li><a tabindex="-1" href="#contact" class="">Contact</a></li>
 				</ul>
 			</nav>
