--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -12,6 +12,16 @@
 	</head>
 	<body>
 		<header>
+			<div id="header-wrapper">
+				<nav>
+					<ul>
+						<li><a href="/about">Home</a></li>
+						<li><a>Login</a></li>
+						<li><a href="/register">Register</a></li>
+						<li><a href="/news">News</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
 		<div id="wrapper">
 
@@ -50,6 +60,12 @@
 
 		</div>
 
+		<footer>
+			<div id="footer-wrapper">
+				footer here
+			</div>
+		</footer>
+
 
 		<!--TEMPLATES-->
 
@@ -64,9 +80,9 @@
 				<h3>
 					<!-- If there's a profile, clicking on the name brings you to the business profile -->
 					{{#profile}}
-					<a href="profile/{{profile}}">{{name}}</a>
+					<a href="#/profile/{{profile}}">{{name}}</a>
 					{{/profile}}
-					<!-- Otherwise just displa the business' name -->
+					<!-- Otherwise just display the business' name -->
 					{{^profile}}
 					{{name}}
 					{{/profile}}
