--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -27,7 +27,7 @@
 		<div id="wrapper">
 
 			<section id="action">
-				<a id="list-your-space" class="button-glossy yellow hide_when_printing" href="/rooms/new">List your business</a>
+				<a id="list-your-space" class="button-glossy yellow hide_when_printing" href="">List your business</a>
 			</section>
 
 
