--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -41,8 +41,9 @@
 					<section>
 						<label for="search-location">Where are you?</label>
 						<input id="search-location" type="text" />
-					</section>
+						</section>
 					<section>
+						<a id="search-button" class="button-glossy yellow hide_when_printing" href="">Search</a>
 						<!--
 						<input id="search-dir" type="checkbox" />
 						<label for="search-dir">Search entire directory</label>
