--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -34,10 +34,11 @@
 			</div>
 		</div>
 
-		<footer>
+		<footer style="display: none;">
 			<div id="footer-wrapper">
 				footer here
 			</div>
 		</footer>
 	</body>
+
 </html>
