--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -13,7 +13,7 @@
 		<link href="main.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
-		<header>
+		<header id="site-header">
 			<div id="header-wrapper">
 				<nav>
 					<ul>
