--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -5,8 +5,7 @@
 		<script type="text/javascript" src="javascript/underscore-min.js"></script>
 		<script type="text/javascript" src="javascript/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="javascript/jquery-stickyPanel.js"></script>
-		<!--<script type="text/javascript" src="javascript/backbone-min.js"></script>-->
-		<script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone.js"></script>
+		<script type="text/javascript" src="javascript/backbone-min.js"></script>
 		<script type="text/javascript" src="javascript/mustache.js"></script>
 		<script type="text/javascript" src="javascript/main.js"></script>
 		<link href="button.css" type="text/css" rel="stylesheet" />
