--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header id="site-header">
-			<div id="header-wrapper">
+			<div id="header-wrapper" class="wrapper">
 				<nav>
 					<ul>
 						<li><a href="/about">Home</a></li>
@@ -24,18 +24,46 @@
 				</nav>
 			</div>
 		</header>
+		
+		<!--
+		<div class="banner">
+			<div class="wrapper">
+			</div>
+		</div>
+		-->
 
-		<div id="wrapper">
-			<section id="action">
-				<a id="list-your-space" class="button-glossy yellow hide_when_printing" href="">List your business</a>
-			</section>
-			<div id="view-container">
+		<div id="background">
+			<div id="wrapper" class="wrapper">
+				<div id="view-container">
+				</div>
 			</div>
 		</div>
 
-		<footer style="display: none;">
-			<div id="footer-wrapper">
-				footer here
+		<footer id="footer">
+			<div class="wrapper">
+				<nav>
+					<ul>
+						<li>
+							<h5>Explore</h5>
+							<ul>
+								<li><a href="#">Features</a></li>
+								<li><a>Service Directory</a></li>
+								<li><a>Languages</a></li>
+							</ul>
+						</li>
+						<li>
+							<h5>Company</h5>
+							<ul>
+								<li><a>About Us</a></li>
+								<li><a>Contact Us</a></li>
+								<li><a>Blog</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+				<div class="grid_12 alpha omega copyright">
+					&copy; 2011 <a href="http://www.copticpages.com/">CopticPages</a> <span class="pipe">|</span> <a href="/privacy">Privacy</a> <span class="pipe">|</span> <a href="tos">Terms of Service</a>
+				</div>
 			</div>
 		</footer>
 	</body>
