--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="javascript/jquery-stickyPanel.js"></script>
 		<script type="text/javascript" src="javascript/backbone-min.js"></script>
 		<script type="text/javascript" src="javascript/mustache.js"></script>
+		<script type="text/javascript" src="javascript/cp.js"></script>
 		<script type="text/javascript" src="javascript/main.js"></script>
 		<link href="button.css" type="text/css" rel="stylesheet" />
 		<link href="main.css" type="text/css" rel="stylesheet" />
