--- a/dev/copticpages/index.html
+++ b/dev/copticpages/index.html
@@ -25,12 +25,45 @@
 				</nav>
 			</div>
 		</header>
-		
+
 		<!--
-		<div class="banner">
 			<div class="wrapper">
+				<div id="cities-container">
+					<ul id="cities-list">
+						<li>
+							<h5>Alberta</h5>
+							<ul>
+								<li><a>Calgary</a></li>
+								<li><a>Edmonton</a></li>
+							</ul>
+						</li>
+						<li>
+							<h5>British Columbia</h5>
+							<ul>
+								<li><a>Vancouver</a></li>
+								<li><a>Victoria</a></li>
+							</ul>
+						</li>
+						<li>
+							<h5>Ontario</h5>
+							<ul>
+								<li><a>London</a></li>
+								<li><a>Kingston</a></li>
+								<li><a>Toronto (GTA)</a></li>
+								<li><a>Ottawa</a></li>
+								<li><a>Windor</a></li>
+								<li><a>St Catharines-Niagara</a></li>
+							</ul>
+						</li>
+						<li>
+							<h5>Quebec</h5>
+							<ul>
+								<li><a>Montreal</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
 		-->
 
 		<div id="background">
