--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
       <a href="http://www.kiro.me" id="logo">K. Risk</a>
       <nav id="site-nav">
         <ul id="site-menu">
-          <li class="selected"><a href="./index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="./about.html">About me</a></li>
+          <li class="selected"><a href="./about.html">About me</a></li>
         </ul>
       </nav>
     </header>
@@ -29,5 +29,4 @@
     </div>
 
   </body>
-  <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 </html>
