--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,9 @@
       <a href="http://www.kiro.me" id="logo">K. Risk</a>
       <nav id="site-nav">
         <ul id="site-menu">
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="http://www.kiro.me/index.html">Home</a></li>
           <li class="selected"><a>Projects</a></li>
-          <li><a href="./about.html">About me</a></li>
+          <li><a href="http://www.kiro.me/about.html">About me</a></li>
         </ul>
       </nav>
     </header>
