--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="http://www.kiro.me" id="logo">K. Risk</a>
       <nav id="site-nav">
         <ul id="site-menu">
-          <li class="selected"><a href="http://www.kiro.me/">Home</a></li>
+          <li class="selected"><a>Home</a></li>
           <li><a href="http://www.kiro.me/projects.html">Projects</a></li>
           <li><a href="http://www.kiro.me/about.html">About me</a></li>
         </ul>
