--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <div id="container">
-      <h1>Coming soon... I promise!</h1>
+      <h1>Coming soon... I promise!  For now, checkout my <a href="http://www.kiro.me/projects.html">projects</a>...</h1>
     </div>
 
   </body>
