--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
       <img id="profile-image" width="57" height="57" src="http://www.gravatar.com/avatar/4ae8dc54def0eb337f21fe40fa8972db?s=80">
       <p>
-          My name's Kiro Risk, I'm a Senior Web Developer at <a href="http://www.linkedin.com/in/kirollos">LinkedIn</a>.  I work with JavaScript, HTML, CSS, Java, Python, MySQL and a plethora of other programming goodness every day.
+          My name's Kiro Risk, I'm a Senior Web Developer at <a href="http://www.linkedin.com/in/kirollos">LinkedIn</a>.  I work with JavaScript, HTML, CSS, Java, Python, MySQL, .NET, C#, and a plethora of other programming goodness every day.
       </p>
       <br/>
 
