complete new design using jekyll

--- a/about.html
+++ b/about.html
@@ -1,54 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>K. Risk</title>
-    <meta name="description" content="Front-end developer, a JavaScript afficionado, and lover of all things web-related">
-    <!--
-      I'm a front-end developer, a JavaScript afficionado, and I like all things web-related.
-       - K. Risk
-    -->
-    <meta name="keywords" content="Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer">
-    <link href='http://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet' type='text/css'>
-    <link href="style/default.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-
-    <header>
-      <a href="http://www.kiro.me" id="logo">K. Risk</a>
-      <nav id="site-nav">
-        <ul id="site-menu">
-          <li><a href="http://www.kiro.me/index.html">Home</a></li>
-          <li><a href="http://www.kiro.me/projects.html">Projects</a></li>
-          <li class="selected"><a href="http://www.kiro.me/about.html">About me</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div id="container">
-
-      <h2>About Me</h2>
-
-      <img id="profile-image" width="57" height="57" src="http://www.gravatar.com/avatar/4ae8dc54def0eb337f21fe40fa8972db?s=80">
-      <p>
-          My name's Kiro Risk, I'm a Senior Web Developer at <a href="http://www.linkedin.com/in/kirollos">LinkedIn</a>.  I work with JavaScript, HTML, CSS, Java, Python, MySQL, .NET, C#, and a plethora of other programming goodness every day.
-      </p>
-      <br/>
-
-      <h4>Need something built?</h4>
-      <p>
-        If you have any ideas for something new and interesting, or would like some freelance done, <a href="mailto:kirollos@gmail.com">contact me</a>.
-      </p>
-      <a href="http://www.linkedin.com/in/kirollos" target="_blank">
-          <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Kirollos Risk's profile on LinkedIn">
-      </a>
-
-      <h4>LinkedIn is hiring!</h4>
-      <p>
-        My company, <a href="http://www.linkedin.com" target="_blank">LinkedIn</a>, is hiring like mad.  So, if you're an engineer, and/or you have a passion for web development, then <a href="mailto:kirollos@gmail.com">contact me</a>!  Tell me a little about yourself, and if you have a LinkedIn profile, send me the link.  I'm quite fast at responding.
-      </p>
-
-
-    </div>
-
-  </body>
-</html>
+---
+layout: default
+name: about
+---
