--- a/projects.html
+++ b/projects.html
@@ -1,47 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>K. Risk</title>
-    <meta name="description" content="Front-end developer, a JavaScript afficionado, and lover of all things web-related">
-    <!--
-      I'm a front-end developer, a JavaScript afficionado, and I like all things web-related.
-       - K. Risk
-    -->
-    <meta name="keywords" content="Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer">
-    <link href='http://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet' type='text/css'>
-    <link href="style/default.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
+---
+layout: default
+---
 
-    <header>
-      <a href="http://www.kiro.me" id="logo">K. Risk</a>
-      <nav id="site-nav">
-        <ul id="site-menu">
-          <li><a href="http://www.kiro.me/index.html">Home</a></li>
-          <li class="selected"><a>Projects</a></li>
-          <li><a href="http://www.kiro.me/about.html">About me</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div id="container">
-
-      <ul id="project-list">
-        <li>
-          <h3><a href="/Fuse">Fuse.js</a></h3>
-          <h4>Lighweight fuzzy-search, in JavaScript.</h4>
-        </li>
-        <li>
-          <h3><a href="/Class">Class.js</a></h3>
-          <h4>Lightweight JavaScript prototypal inheritance model.</h4>
-        </li>
-        <li>
-          <h3><a href="/textualizer">textualizer</a></h3>
-          <h4>A jQuery plug-in which transitions through blurbs of text, animating each character.</h4>
-        </li>
-      </ul>
-
-    </div>
-
-  </body>
-</html>
+<ul id="project-list">
+  <li>
+    <h3><a href="./projects/fuse.html">Fuse.js</a></h3>
+    <h4>Lighweight fuzzy-search, in JavaScript.</h4>
+  </li>
+  <li>
+    <h3><a href="./projects/class.html">Class.js</a></h3>
+    <h4>Lightweight JavaScript prototypal inheritance model.</h4>
+  </li>
+  <li>
+    <h3><a href="../projects/aq.html">AQ</a></h3>
+    <h4>Automate QUnit Tests, leveraging Node.js</h4>
+  </li>
+  <li>
+    <h3><a href="../projects/textualizer.html">textualizer</a></h3>
+    <h4>A jQuery plug-in which transitions through blurbs of text, animating each character.</h4>
+  </li>
+</ul>
