--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>K. Risk</title>
-    <meta name="description" content="Front-end developer, a JavaScript afficionado, and lover of all things web-related">
-    <!--
-      I'm a front-end developer, a JavaScript afficionado, and I like all things web-related.
-       - K. Risk
-    -->
-    <meta name="keywords" content="Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer">
-    <link href='http://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet' type='text/css'>
-    <link href="style/default.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
+---
+layout: default
+name: home
+summary: Front-end developer, a JavaScript afficionado, and lover of all things web-related
+keywords: Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer
+javascript:
+  - /javascripts/json_search.0.9.0.js
+  - /javascripts/home.js
+---
 
-    <header>
-      <a href="http://www.kiro.me" id="logo">K. Risk</a>
-      <nav id="site-nav">
-        <ul id="site-menu">
-          <li class="selected"><a>Home</a></li>
-          <li><a href="http://www.kiro.me/projects.html">Projects</a></li>
-          <li><a href="http://www.kiro.me/about.html">About me</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div id="container">
-      <h1>Coming soon... I promise!  For now, check out my <a href="http://www.kiro.me/projects.html">projects</a>...</h1>
-    </div>
-
-  </body>
-  <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
-</html>
+<h2>Posts</h2>
+<ul class="posts">
+  <!--
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <p>{{ post.summary }}</p>
+    </li>
+  {% endfor %}
+  -->
+</ul>
