--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ layout: default
 
 <ul id="project-list">
   <li>
-    <h3><a href="./projects/fuse.html">Fuse.js</a></h3>
+    <h3><a href="/projects/fuse.html">Fuse.js</a></h3>
     <h4>Lighweight fuzzy-search, in JavaScript.</h4>
   </li>
   <li>
