--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ javascript:
   - /javascripts/home.js
 ---
 
+Nothing yet! Check back soon...
+
+For now, take a loot at my <a href="./projects.html" title="krisk's projects">projects</a>.
+
+<!--
 <h2>Posts</h2>
 <ul class="posts">
 
@@ -18,4 +23,6 @@ javascript:
     </li>
   {% endfor %}
 
+
 </ul>
+-->
