--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ javascript:
 
 Nothing yet! Check back soon...
 
-For now, take a loot at my <a href="./projects.html" title="krisk's projects">projects</a>.
+For now, take a look at my <a href="./projects.html" title="krisk's projects">projects</a>.
 
 <!--
 <h2>Posts</h2>
