--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ keywords: Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer
 <ul class="posts">
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      <p>{{ post.date | date_to_string }}</p>
-      <!--<p>{{ post.summary }}</p>-->
+      <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+      <p>
+        <small>{{ post.date | date: "%B %e, %Y" }}</small>
+      </p>
+      <p>{{ post.summary }}</p>
     </li>
   {% endfor %}
 </ul>
