Added styling for project lists and posts

--- a/projects.html
+++ b/projects.html
@@ -3,21 +3,22 @@ layout: default
 name: projects
 ---
 
-<ul id="project-list">
+<h2>Projects</h2>
+<ul class="article-list">
   <li>
     <h3><a href="/projects/fuse.html">Fuse.js</a></h3>
-    <h4>Lighweight fuzzy-search, in JavaScript.</h4>
+    <p>Lighweight fuzzy-search, in JavaScript.</p>
   </li>
   <li>
     <h3><a href="./projects/class.html">Class.js</a></h3>
-    <h4>Lightweight JavaScript prototypal inheritance model.</h4>
+    <p>Lightweight JavaScript prototypal inheritance model.</p>
   </li>
   <li>
     <h3><a href="../projects/aq.html">AQ</a></h3>
-    <h4>Automate QUnit Tests, leveraging Node.js</h4>
+    <p>Automate QUnit Tests, leveraging Node.js</p>
   </li>
   <li>
     <h3><a href="../projects/textualizer.html">textualizer</a></h3>
-    <h4>A jQuery plug-in which transitions through blurbs of text, animating each character.</h4>
+    <p>A jQuery plug-in which transitions through blurbs of text, animating each character.</p>
   </li>
 </ul>
