--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ keywords: Kirollos Risk, Web Developer, JavaScript, JS, Front-end engineer
 ---
 
 <h2>Posts</h2>
-<ul class="posts">
+<ul class="article-list">
   {% for post in site.posts %}
     <li>
       <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
