fixed fiber syntax

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ name: projects
     <p>Lighweight fuzzy-search, in JavaScript.</p>
   </li>
   <li>
-    <h3><a href="./projects/class.html">Class.js</a></h3>
+    <h3><a href="./projects/fiber.html">Fiber.js</a></h3>
     <p>Lightweight JavaScript prototypal inheritance model.</p>
   </li>
   <li>
